# fullstack-boilerplate

./: .gitignore  .trunkignore  README.md
.trunk/: trunk.yaml
backend/: .env.example  pyproject.toml  requirements-dev.txt
frontend/: .env.example
frontend/src/components/: Button.tsx  ItemForm.tsx
