[tool.poetry]
name = "your-project-backend"
version = "0.1.0"
description = "FastAPI backend for your project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.18"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
typing-extensions = "^4.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.17.1"
ruff = "^0.12.7"
bandit = "^1.8.6"
yamllint = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
